--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="lock-screen" id="lockScreen">
         <h2>Ingresa tu código de acceso</h2>
         <div class="input-container">
-            <input type="password" maxlength="1" id="digit1" class="code-input">
-            <input type="password" maxlength="1" id="digit2" class="code-input">
-            <input type="password" maxlength="1" id="digit3" class="code-input">
-            <input type="password" maxlength="1" id="digit4" class="code-input">
+            <input type="password" maxlength="1" id="digit1" class="code-input" inputmode="numeric" pattern="[0-9]*">
+            <input type="password" maxlength="1" id="digit2" class="code-input" inputmode="numeric" pattern="[0-9]*">
+            <input type="password" maxlength="1" id="digit3" class="code-input" inputmode="numeric" pattern="[0-9]*">
+            <input type="password" maxlength="1" id="digit4" class="code-input" inputmode="numeric" pattern="[0-9]*">
         </div>
         <button onclick="validateCode()">Validar</button>
         <p id="errorMessage" class="error"></p>
