--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pantalla de Bloqueo</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/lock-screen.css">
+    <link rel="stylesheet" href="./css/main-container.css">
 </head>
 <body>
     <div class="lock-screen" id="lockScreen">
@@ -20,10 +21,19 @@
     </div>
 
     <div class="main-content" id="mainContent" style="display:none;">
-        <h1>¡Bienvenido!</h1>
-        <p>Has desbloqueado el contenido.</p>
+        <div class="container-nav">
+            <div class="tabs">
+                <input type="radio" id="radio-1" name="tabs" checked="">
+                <label class="tab" for="radio-1">Copias</label>
+                <input type="radio" id="radio-2" name="tabs">
+                <label class="tab" for="radio-2">Admin</label>
+                <input type="radio" id="radio-3" name="tabs">
+                <label class="tab" for="radio-3">otros</label>
+                <span class="glider"></span>
+            </div>
+        </div>
     </div>
 
-    <script src="./index.js"></script>
+    <script src="./js/lock-screen.js"></script>
 </body>
 </html>
