--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <p id="errorMessage" class="error"></p>
     </div>
     <div class="main-content" id="mainContent" style="display:none;">
+        <div class="titulo">
+            <H2>COPYNIT</H2>
+        </div>
         <div class="card">
             <div class="title">
                 <span>
@@ -53,6 +56,9 @@
             <div class="inputGroup">
                 <input type="number" required="" autocomplete="off">
                 <label for="name">Copias</label>
+            </div>
+            <div class="list">
+                <p>hector</p>
             </div>
             <button>
                 <div>
