--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             </div>
         </div>
         <div class="texto">
+            <h3>Registro:</h3>
             <div class="inputGroup">
                 <input type="number" required="" autocomplete="off">
                 <label for="name">Copias</label>
