--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <input type="password" maxlength="1" id="digit3" class="code-input" inputmode="numeric" pattern="[0-9]*">
             <input type="password" maxlength="1" id="digit4" class="code-input" inputmode="numeric" pattern="[0-9]*">
         </div>
-        <button onclick="validateCode()">Validar</button>
+        <button onclick="validateCode()">Ingresar</button>
         <p id="errorMessage" class="error"></p>
     </div>
     <div class="main-content" id="mainContent" style="display:none;">
